--- a/config.json
+++ b/config.json
@@ -7,6 +7,7 @@
         "jid"         : "admin@localhost",
         "password"    : "admin123",
         "host"        : "localhost",
-        "port"        : 5222
+        "port"        : 5222,
+        "reconnect"   : false
     }
 }
