updated lixabot to handle filling of online users in user list.

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "swig" : "*",
         "node-stringprep" : "*",
         "node-xmpp" : "*",
-        "request" : "*"
+        "request" : "*",
+	    "async" : "*"
     }
 }
